--- a/web/templates/explorar.html
+++ b/web/templates/explorar.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}Explorar{% endblock %}
 {% block body %}
-<div class="container py-5 text-center">
-    <h2 class="mb-4">Explorar por letra</h2>
-    <div class="d-flex flex-wrap justify-content-center" style="gap: 0.5rem;">
-        {% for letra in letras %}
-            <a href="{{ url_for('explorar_letra', letra=letra) }}" class="btn btn-outline-primary">{{ letra }}</a>
-        {% endfor %}
+   <h2 class="mb-4 text-center">Explorar por letra</h2> <br>
+   <div class="container py-5">
+<div class="row row-cols-2 row-cols-sm-4 row-cols-md-6 g-3">
+    {% for letra in letras %}
+    <div class="col">
+        <a href="{{ url_for('explorar_letra', letra=letra) }}" class="text-decoration-none">
+            <div class="card letra-ficha h-100 text-center shadow-sm">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h2 class="fw-bold mb-0">{{ letra }}</h2>
+                    <small class="text-muted mt-2">{{ conteo[letra] if conteo[letra] > 0 else 'Sin revistas' }}</small>
+                </div>
+            </div>
+        </a>
     </div>
+    {% endfor %}
 </div>
+</div>
+
 {% endblock %}
