--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{%block title%}Revistas Database{% endblock %}
+{%block title%}AtlasCientífico{% endblock %}
 
 {% block body %}
 
