--- a/web/templates/registro.html
+++ b/web/templates/registro.html
@@ -19,7 +19,7 @@
             <label class="form-label">Contraseña</label>
             <input type="password" name="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-success w-100">Registrarme</button>
+        <button type="submit" class="btn btn-primary w-100">Registrarme</button>
     </form>
 </div>
 {% endblock %}
