ya quedo, lee de data/json y todo se ve correcto

--- a/web/templates/explorar.html
+++ b/web/templates/explorar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Explorar{% endblock %}
 {% block body %}
-   <h2 class="mb-4 text-center">Explorar por letra</h2> <br>
+   <h2 class="mb-4 text-center">Explorar por carácter/h2> <br>
    <div class="container py-5">
 <div class="row row-cols-2 row-cols-sm-4 row-cols-md-6 g-3">
     {% for letra in letras %}
